# fastText

./: .gitignore  CMakeLists.txt  Makefile  bindings.rs
examples/: CMakeLists.txt  c_api_example.c
flutter/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter/android/: build.gradle  settings.gradle
flutter/android/src/main/: AndroidManifest.xml
flutter/example/: README.md  pubspec.yaml
flutter/example/android/app/: build.gradle.kts
flutter/example/integration_test/: simple_test.dart
flutter/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/example/lib/: main.dart
flutter/example/linux/: CMakeLists.txt
flutter/example/web/: index.html  manifest.json
flutter/example/windows/: CMakeLists.txt
flutter/ios/: fasttext.podspec
flutter/lib/: fasttext.dart
flutter/linux/: CMakeLists.txt
flutter/macos/: fasttext.podspec
flutter/rust/: Cargo.toml  README.md  build.rs
flutter/rust/fasttext_bindings/: Cargo.toml  README.md  build.rs
flutter/rust/fasttext_bindings/src/: bindings.rs
flutter/rust/src/: bindings.rs  frb_generated.rs  lib.rs
flutter/rust/src/api/: fasttext.rs  main.rs  mod.rs
flutter/rust/tests/: test_fasttest.rs
flutter/rust/tests/fixtures/: .gitignore
flutter/rust/webassembly/: fasttext_wasm.js  fasttext_wasm.wasm
flutter/scripts/: frb_generate.sh
flutter/windows/: CMakeLists.txt
rust/: .gitignore  Cargo.toml  build.rs
rust/src/: lib.rs
rust/tests/: test_fasttest.rs
src/: c_api.cc  c_api.h  fasttext.cc  fasttext.h
webassembly/: fasttext_wasm.js  fasttext_wasm.wasm  predict.html
(+15 files in other folders)
