[package]
name = "fasttext_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
fasttext = { version = "0.1.0", path = "../../rust" }
flutter_rust_bridge = "=2.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
