[package]
name = "fasttext"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.34"
