[package]
name = "fasttext"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
fasttext_bindings = { version = "0.1.0", path = "fasttext_bindings" }
flutter_rust_bridge = "=2.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[build-dependencies]
cc = "1.2.34"
